--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+copyright notice
+-->
 <head>
 	<title>An example website modified</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
