--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 copyright notice
 -->
 <head>
-	<title>An example website modified</title>
+	<title>A great website modified</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content modified
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2020</p>
 	</footer>
 </body>
 </html>
