--- a/simple.html
+++ b/simple.html
@@ -17,11 +17,11 @@ copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content modified in the master
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2022</p>
 	</footer>
 </body>
 </html>
