--- a/simple.html
+++ b/simple.html
@@ -16,7 +16,7 @@ copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content modified in the master
+			Just some content modified in the feature branch
 		</p>
 	</main>
 	<footer class="container">
