modified the simple.html

--- a/simple.html
+++ b/simple.html
@@ -16,11 +16,11 @@ copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content modified in the feature branch
+			Master:  potential conflict
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2022</p>
+		<p>&copy; Company 2025</p>
 	</footer>
 </body>
 </html>
