myfeature branch change to simple.html

--- a/simple.html
+++ b/simple.html
@@ -15,7 +15,8 @@ copyright notice
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
-		<p>
+		<p> 
+			Text entered in the myfeature branch
 		</p>
 	</main>
 	<footer class="container">
