--- a/simple.html
+++ b/simple.html
@@ -16,6 +16,7 @@ copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+			potential conflict done in master
 		</p>
 	</main>
 	<footer class="container">
