changed simple.html in master branch

--- a/simple.html
+++ b/simple.html
@@ -14,7 +14,7 @@ copyright notice
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+		content entered in master branch
 		</p>
 	</main>
 	<footer class="container">
