--- a/simple.html
+++ b/simple.html
@@ -14,7 +14,7 @@ copyright notice
 </head>
 <body>
 	<main class="container">
-		content entered in master branch
+		content entered in master branch 2
 		</p>
 	</main>
 	<footer class="container">
