simple.html changed in myfeature branch

--- a/simple.html
+++ b/simple.html
@@ -14,7 +14,7 @@ copyright notice
 </head>
 <body>
 	<main class="container">
-		content entered in master branch 2  d 
+		content entered in master branch 2 kkk 
 		</p>
 	</main>
 	<footer class="container">
