simple.html before rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -14,7 +14,8 @@ copyright notice
 </head>
 <body>
 	<main class="container">
-		content entered in master branch 2 kkk 
+		<p>
+		content entered in master
 		</p>
 	</main>
 	<footer class="container">
