--- a/simple.html
+++ b/simple.html
@@ -15,7 +15,7 @@ copyright notice
 <body>
 	<main class="container">
 		<p>
-		content entered in master again
+		my content
 		</p>
 	</main>
 	<footer class="container">
